# hyprmagic

./: CMakeLists.txt  Cargo.toml
src/: cli.rs  error.rs  floaters.cpp  floaters.hpp  floaters.rs  hyprland.rs  ipc.rs  lua_bindings.cpp  lua_bindings.hpp  main.cpp  main.rs  waybar.rs
waybar/: module.cpp  render.cpp  render.hpp  render_diff.sh  render_test.cpp
